--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="icon" href="assets/img/logo-smit.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <script src="assets/bootstrap/js/jquery-slim.min.js"></script>
     <link rel="stylesheet" href="assets/css/style.css">
@@ -30,6 +31,52 @@
       </nav>
 
     <!-- end navbar-->
+
+    <!-- jumbotron -->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4 text-center">Fredy Nur Apriyanto</h1>
+            <p class="lead text-center">Deskripsinya apa sih yah?</p>
+        </div>
+    </div>
+    <!-- end jumbotron-->
+
+    <!--container-->
+    <div class="container" id="card-content">
+        <div class="row">
+            <div class="col-lg">
+                <div class="card">
+                    <img class="card-img-top" src="assets/img/gambar.png" alt="Card image cap">
+                    <div class="card-body">
+                        <p class="card-text">Ini gambar 1</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg">
+                <div class="card">
+                    <img class="card-img-top" src="assets/img/gambar.png" alt="Card image cap">
+                    <div class="card-body">
+                        <p class="card-text">ini gambar 2</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg">
+                <div class="card">
+                    <img class="card-img-top" src="assets/img/gambar.png" alt="Card image cap">
+                    <div class="card-body">
+                        <p class="card-text">ini gambar 3</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--end container-->
+
+    <!--footer-->
+    <!-- <footer>
+        <p class="text-center">Copyright &copy; 2018 by Fredd</p>
+    </footer> -->
+    <!--end footer-->
 </body>
 <script src="assets/bootstrap/js/popper.min.js"></script>
 </html>
